<resources>
    <string name="app_name">Augimas</string>
    <string name="app_build_version">v0.0.2554</string>
    <string name="firebase_user_id">ID</string>
    <string name="firebase_user">User</string>
    <string name="firebase_chat">Chat</string>
    <string name="firebase_message">Message</string>
    <string name="firebase_object">Firebase.Object</string>
    <string name="firebase_team">Team</string>
    <string name="firebase_team_role">Team.Role</string>
    <string name="firebase_team_status">Team.Status</string>
    <string name="firebase_member">Member</string>
    <string name="firebase_member_role">Member.Role</string>
    <string name="firebase_member_status">Member.Status</string>
    <string name="firebase_branding_element">BrandingElement</string>
    <string name="firebase_branding_element_status">BrandingElement.Status</string>
    <string name="firebase_chat_object">Chat</string>
    <string name="firebase_user_object">User</string>
    <string name="firebase_message_object">Message</string>
    <string name="firebase_team_object">Team</string>
    <string name="firebase_team_role_object">Team Role</string>
    <string name="firebase_team_status_role">Team Status</string>
    <string name="firebase_member_object">Member</string>
    <string name="firebase_member_role_object">Member Role</string>
    <string name="firebase_member_status_role">Member Status</string>
    <string name="firebase_branding_element_object">Branding Element</string>
    <string name="firebase_branding_element_status_object">Branding Element Status</string>
    <string name="firebase_users_directory">users</string>
    <string name="firebase_chats_directory">chats</string>
    <string name="firebase_members_directory">members</string>
    <string name="firebase_messages_directory">messages</string>
    <string name="firebase_teams_directory">teams</string>
    <string name="firebase_recent_activities_directory">recentActivities</string>
    <string name="firebase_channels_directory">channels</string>
    <string name="firebase_devices_directory">devices</string>
    <string name="firebase_url_directory">https://augimas-25621.firebaseio.com/</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_add_contact">Add Contact</string>
    <string name="title_update_contact">Update Contact</string>
    <string name="title_build_information">Build Information</string>
    <string name="action_settings">Settings</string>
    <string name="pref_signout">Sign Out</string>
    <string name="pref_manage_team">Manage Team</string>
    <string name="pref_my_account">My Account</string>
    <string name="key_signout">signout</string>
    <string name="key_manage_team">manageTeam</string>
    <string name="key_my_account">myAccount</string>
    <string name="key_build_information">buildInformation</string>
    <string name="age_text">age</string>
    <string name="email_text">email</string>
    <string name="nickname_text">nickname</string>
    <string name="password_text">password</string>
    <string name="username_text">username</string>
    <string name="chat_name_text">chat name</string>
    <string name="full_name_text">full name</string>
    <string name="confirm_password_text">confirm password</string>
    <string name="username_or_email_text">username or email</string>
    <string name="enter_username_or_email_text">Enter username or email</string>
    <string name="or_text">Or</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_in_text_capital">SIGN IN</string>
    <string name="sign_up_text_capital">SIGN UP</string>
    <string name="save_text">save</string>
    <string name="submit_text">submit</string>
    <string name="cancel_text">cancel</string>
    <string name="delete_text">delete</string>
    <string name="update_text">update</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="feature_unavailable">Feature unavailable.</string>
    <string name="required_field">Field required.</string>
    <string name="required_email">Email required.</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="required_username">Username required.</string>
    <string name="required_password">Password required.</string>
    <string name="required_full_name">Full name required.</string>
    <string name="required_confirm_password">Confirm password required.</string>
    <string name="error_incorrect_signup_general">You failed to create an account.</string>
    <string name="error_invalid_email">Email invalid.</string>
    <string name="error_field_required">Field required.</string>
    <string name="error_incorrect_password">Incorrect password.</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="error_user_not_found">User not found for input.</string>
    <string name="error_incorrect_signin_general">Failed to sign in.</string>
    <string name="error_contact_duplicate">You have already added this contact.</string>
    <string name="error_invalid_password_length">Password must be longer than 5 characters.</string>
    <string name="error_username_duplicate">That username already exists! Please try another one.</string>
    <string name="error_incorrect_signin_detail_1">Failed to sign in. Incorrect username and/or password.</string>
    <string name="success_contact_updated">Contact updated.</string>
    <string name="success_contact_deleted">Contact deleted.</string>
    <string name="success_signin">You successfully signed in!</string>
    <string name="success_signup">You successfully signed up!</string>
    <string name="home_activity">HomeActivity</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="chat_activity">ChatActivity</string>
    <string name="chat_fragment">ChatFragment</string>
    <string name="sign_in_activity">SignInActivity</string>
    <string name="sign_in_fragment">SignInFragment</string>
    <string name="sign_up_activity">SignUpActivity</string>
    <string name="sign_up_fragment">SignUpFragment</string>
    <string name="chats_list_activity">ChatsListActivity</string>
    <string name="chats_list_fragment">ChatsListFragment</string>
    <string name="clients_list_activity">ClientsListFragment</string>
    <string name="branding_elements_list_fragment">BrandingElementsListFragment</string>
    <string name="notifications_fragment">NotificationsFragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_recent_activities">Recent Activities</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="reminder_date_spinner_items">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Set date...</item>
    </string-array>
    <string-array name="reminder_time_spinner_items">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
        <item>Set time...</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message recentActivities</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="check_connection">checkConnection</string>
    <string name="welcome_back_text">Welcome back</string>
    <string name="success_signout">User signed out.</string>
    <string name="title_change_password">Change Password</string>
    <string name="success_password_updated">Password updated.</string>
    <string name="add_account_text">Add Account</string>
    <string name="ok_text">Ok</string>
    <string name="success_account_switched">Account switched.</string>
    <string name="title_recover_password">Recover Password</string>
    <string name="email_me_text">EMAIL ME</string>
    <string name="dialog_email_me_text">EMAIL ME</string>
    <string name="dialog_cancel_text">CANCEL</string>
    <string name="success_email_sent">Email sent!</string>
    <string name="progress_signing_in">Signing in...</string>
    <string name="progress_signing_up">Creating account...</string>
    <string name="error_password_updated">There was an issue updating your password.</string>
    <string name="updating_password_text">Updating password...</string>
    <string name="new_password_text">new password</string>
    <string name="current_password_text">current password</string>
    <string name="success_contact_added">Contact added.</string>
    <string name="title_create_chat">Create Chat</string>
    <string name="message_text">message text</string>
    <string name="timestamp_text">timestamp</string>
    <string name="send_text">Send</string>
    <string name="error_user_duplicate">User is already in chat.</string>
    <string name="success_user_added_to_chat">User added to chat.</string>
    <string name="action_add_user">Add User</string>
    <string name="begin_questionnaire_text">BEGIN QUESTIONNAIRE</string>
    <string name="occupation_text">occupation</string>
    <string name="view_questionnaires_text">VIEW QUESTIONNAIRES</string>
    <string name="sex_text">sex</string>
    <string name="rating_0">Hated It</string>
    <string name="rating_2">Neutral</string>
    <string name="rating_4">Loved It</string>
    <string name="rating_3">It Was Okay</string>
    <string name="rating_1">Really Didn\'t Like It</string>
    <string name="update_username_text">Change Username</string>
    <string name="update_full_name_text">Change Full Name</string>
    <string name="update_email_text">Change Email</string>
    <string name="a_text">a</string>
</resources>