<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/title_accounts">
        <Preference
            android:key="@string/key_manage_team"
            android:title="@string/pref_manage_team"/>
        <Preference
            android:key="@string/key_my_account"
            android:title="@string/pref_my_account"/>
        <Preference
            android:key="@string/key_sign_out"
            android:title="@string/pref_sign_out"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_build_information">
        <Preference
            android:key="@string/key_build_information"
            android:title="@string/app_build_version"/>
    </PreferenceCategory>

</PreferenceScreen>