<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:checkable="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_chat"
        android:checkable="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_recent_activities"
        android:checkable="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recent_activities" />

    <item
        android:id="@+id/navigation_settings"
        android:checkable="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>
