<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Questionnaire Question Section -->


    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_weight="1"
            android:text="@string/rating_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_weight="1"
            android:text="@string/rating_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_weight="1"
            android:text="@string/rating_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_weight="1"
            android:text="@string/rating_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_weight="1"
            android:text="@string/rating_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RadioGroup>
    <!-- Questionnaire Answer Section -->

</LinearLayout>