<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatImageView
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#cfd8dc"
            android:padding="25dp"
            android:background="@drawable/circle"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:drawableStart="@drawable/ic_person"
                android:focusableInTouchMode="true"
                android:id="@+id/input_username"
                android:inputType="text"
                android:backgroundTint="#9d371e"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:clickable="false"
                android:hint="@string/username_text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_gravity="center"
            android:text="@string/update_username_text"
            android:id="@+id/update_username_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:drawableStart="@drawable/ic_person"
                android:focusableInTouchMode="true"
                android:id="@+id/input_full_name"
                android:inputType="text"
                app:backgroundTint="#9d371e"
                android:textColor="#000"
                android:enabled="false"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_gravity="center"
            android:text="@string/update_full_name_text"
            android:id="@+id/update_full_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:drawableStart="@drawable/ic_email"
                android:focusableInTouchMode="true"
                android:id="@+id/input_email"
                android:inputType="text"
                app:backgroundTint="#9d371e"
                android:textColor="#000"
                android:enabled="false"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_gravity="center"
            android:text="@string/update_email_text"
            android:id="@+id/change_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatButton
            android:layout_gravity="center"
            android:id="@+id/change_password_button"
            android:text="@string/title_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.design.widget.CoordinatorLayout>