<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f9f9f9f9"
    android:fitsSystemWindows="true"
    tools:context="com.marionthefourth.augimas.activities.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">
        <android.support.v7.widget.AppCompatImageView
            android:layout_gravity="center"
            android:src="@drawable/filled_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:paddingBottom="15dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:focusableInTouchMode="true"
                android:drawableStart="@drawable/ic_person_outline"
                android:inputType="text"
                app:backgroundTint="#9d371e"
                android:id="@+id/input_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:drawableStart="@drawable/ic_person"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:id="@+id/input_username"
                app:backgroundTint="#9d371e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:focusableInTouchMode="true"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:id="@+id/input_password"
                app:backgroundTint="#9d371e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_outline"
                app:backgroundTint="#9d371e"
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:focusableInTouchMode="true"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                app:backgroundTint="#9d371e"
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            style="@style/ButtonTheme"
            android:text="@string/sign_up_text_capital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">
            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:text="@string/or_text"
                android:gravity="end|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <android.support.v7.widget.AppCompatButton
                android:layout_weight="5"
                android:id="@+id/text_button_sign_in"
                android:gravity="end|center_vertical"
                android:layout_marginStart="5dp"
                style="@style/NoBackgroundButtonTheme"
                android:text="@string/sign_in_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>