<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/message_view_id"
    android:layout_margin="2dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:gravity="center"
            android:text="@string/timestamp_text"
            android:id="@+id/item_label_last_message_sent_stamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/username_or_email_text"
            android:id="@+id/item_label_username_or_email"
            android:paddingStart="65dp"
            android:paddingBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/item_linear_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:text="@string/a_text"
                android:clickable="false"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textColor="#fff"
                android:layout_marginStart="5dp"
                android:layout_gravity="bottom"
                android:background="@drawable/circle"
                android:id="@+id/item_icon_letter_moniker"/>
            <android.support.v7.widget.AppCompatTextView
                android:padding="8dp"
                android:enabled="false"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#252525"
                android:text="@string/message_text"
                android:layout_marginStart="8dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_label_message_text"
                android:background="@drawable/their_circle"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.design.widget.CoordinatorLayout>