<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.marionthefourth.augimas.fragments.HomeFragment"
    tools:context="com.marionthefourth.augimas.fragments.HomeFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatButton
                android:layout_weight="1"
                android:id="@+id/dashboard_button"
                android:text="@string/title_dashboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_weight="1"
                android:id="@+id/chats_button"
                android:text="@string/title_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatButton
                android:layout_weight="1"
                android:id="@+id/notifications_button"
                android:text="@string/title_notifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_weight="1"
                android:id="@+id/settings_button"
                android:text="@string/title_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>


</android.support.design.widget.CoordinatorLayout>